--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+------------------------------------------------------------
+OBSOLETE
+------------------------------------------------------------
+This repository includes Apache Guacamole 1.1 with Japanese translations. Official Apache Guacamole from 1.2 already includes Japanese translations. Please use that now.
 
 ------------------------------------------------------------
  About this README
